web/css/smartadmin_to_sf1.css
#header
{
    height: 70px;
    margin-bottom: 0px;
}

#header h1 {padding-left: 70px; padding-top: 0px; font-size: 16px; color: #072655; 	font-family: Verdana, Arial, sans-serif; font-weight: bold;}
#header h2 {padding-left: 70px; padding-top: 0px; font-size: 12px; color: #FFF; 	font-family: Verdana, Arial, sans-serif; font-weight: normal;}

body {
	background: #fff url('/images/layout/header.jpg');
	background-repeat: repeat-x;
  font-size: .9em;
}

div#wrapper{float:right;width:100%;margin-left:-200px}

div#content{
  min-height: 400px;
}

div#navigation{float:left;width:105px;}

div#footer
{
  clear:both;
  width:100%;
  padding-top: 20px;
}

div#footer p
{
  text-align:left;
  border-top: 1px solid #CCC;
}

div#footer, div#footer a
{
  color: #AAA;
}

div#navigation
{
  opacity: .2;
}

div#navigation:hover
{
  opacity: 1;
}

/*********** DEFAULT STYLES ************/

h1,h2,h3,h4,h5,h6,pre,form,body,html,p,fieldset,input
{ margin: 0; padding: 0; }

ul, ol {
	margin-top: 0px;
	margin-bottom: 0px;
}

body, td, p
{
  margin: 0px;
  padding: 0px;
  font-family: Verdana, arial, helvetica, sans-serif;
  font-size: 10px;
}

body
{
  background-color: #F6F9FD;
  padding: 10px;
}

thead { display: table-header-group; }
tfoot { display: table-footer-group; }

p {
	margin:0px 0px 16px 0px;
	padding:0px;
}

a,
a:link,
a:visited
{
	color:#0000EE;
	text-decoration:none;
}

a:hover {text-decoration: underline;}
a img,:link img,:visited img { border: none; }


h1 {
	margin:0px 0px 15px 0px;
	padding:0px;
	font-size:20px;
	font-weight:900;
	color:#AEAEAE;
}

hr
{
  border: none;
  border-top: 1px solid #7A8FAD;
}

th
{
  text-align: left;
}

option[disabled] {
  color: #AAAAAA;
}

table.twoColumnLayout {
	width: 100%;
}

table.twoColumnLayout td {
	vertical-align: top;
}

table.twoColumnLayout td.fixedColumn {
	padding-right: 10px;
	width: 230px;
}

/*********** Dashboard ******************/

img.icon
{
  border: 1px solid #999999;
  padding: 5px;
  padding-left: 10px;
  padding-right: 10px;
  margin-right: 8px;
  background-color: white;
  background-image: url(/images/icons/_icon_bg.png);
  float:left;
}

/*********** ALLERLEI ******************/

.warning {
  color: red;
}

.float {
  float: left;
}

div.spacer {
  clear: both;
}

.alignright {
  text-align: right;
}


/* Show calendar on top of everything */
div.calendar {
  z-index: 1000;
}

img.icon_inline {
  vertical-align: middle;
  margin: 0px;
  margin-left: 2px;
  margin-right: 2px;
  position: relative;
  top: -2px;
}


/*********** PAGE BLOCKS ************/

.widget-body,
.checkbox.placeholders,
#placeholders {
    position: relative;
	border: 1px solid #7A8FAD;
	background-color: white;
	margin-bottom: 8px;
	padding: 6px;
	padding-top: 20px;
}

.widgetbody.gearchiveerd {
  background-color: #F9F9F9;
	border: 1px solid #BBBBBB;
}


div.flashpageblock {
  background-color: #DFFCA6;
	border: 1px solid #739845;
	margin-bottom: 30px;
	padding: 10px;
	position: relative;
	top: -10px;
}

div.pageactions {
  position: relative;
  float: right;
  top: -13px;
}


h2 {
  font-size:14px;
  margin-bottom: 7px;
}

h2 img{
  position: relative;
  top: 7px;
}

.placeholders
{
    width: 275px;
    display: block;
    margin-left: 20px;
}
header h2,
.placeholders {
  font-weight: normal;
	font-size: 11px;
	padding-top: 5px !important;
	padding-bottom: 2px;
	margin-bottom:0 !important;
	color: #072655;
	padding-left: 7px;
	border: 1px solid #7A8FAD;
	border-bottom: 0 !important;
	background-color:#D6E1F0;
  z-index: 15; /* Moet hoger zijn dan de z-index van de overlay om divs te disablen */
}

header .jarviswidget-ctrls {
  float: right;
  padding-right: 5px;
  padding-top:5px;
}

header h2.gearchiveerd {
	color: #444444;
	border: 1px solid #BBBBBB;
	border-bottom: 0px;
	background-color:#FFFFAA;
}

li.gearchiveerd {
	color: #444444;
	background-color:#FFFFAA;
}

/* action icons in pageblock header */
h2.pageblock .actionicon
{
  float: right;
  margin-top: -4px;
  padding-right: 3px;
}

fieldset legend .actionicon
{
  margin-top: -17px;
  padding-right: 3px;
}



/* icons in a pageblock header */
header h2 img {
  position: relative;
  top: 2px;
}

div.pageblock > hr,
div.pageblock > form > hr
{
  margin-left: -6px;
  margin-right: -6px;
}


div.pageactions {
	width:auto;
	min-width:200px;
	text-align:right;
}


.jarviswidget .tt-tabpanes
{
    display: inline-block;
    width: 75%;
    margin-bottom: 10px;
}

#new_brief_bijlage0
{
    margin-left: 0 !important;
}
/******* OBJECT INFO ********/

div.objectinfo {

/*  top: -85px;
  right: 10px;*/
  width: auto;
  background-color: white;
  /*float:right;*/
  border: 1px solid gray;
  /*opacity: 0.15;*/
}

div.objectinfo td,
div.objectinfo th {
  background-color: white;
  font-size: 9px;
}

div.objectinfo th {
  padding-right:10px;
}

div.objectinfosmall {

  text-align: right;
  font-size: 9px;
  color: #444444;
}

/*** TABLES ***/
.smart-form
{
    width: 100%;
}

.smart-form fieldset
{
    margin: 5px 0 15px 0;
}

.col .label
{
  display: inline-block;
  font-weight: normal;
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
  top: -1px;
  padding-top: 2px;
}
.col .label:first-child {
  width: 200px;
}

.col .label .error
{
  color: red;
}

.col-6
{
    width: 50%;
    float: left;
}

table.formtable tr.required th
{
  font-weight: bold;
}

table.formtable .readonly
{
  font-weight: bold;
  display:inline
}

.col .label, .col .input, .col .select {
    height: 16px;
}

.label.placeholders {
  text-align: left;
  width:  275px;
  padding-right: 5px;
}

.jarviswidget input[type="text"]
{
    width: 180px !important;
}

.fa.fa-minus, .fa.fa-refresh
{
    display: none !important;
}

i
{
  height: 16px;
}

.bladeren
{
  display: none;
}
/********* FORMS *************/


form div.formitemhidable {
  display:inline;
}

input, option, optgroup, select, textarea {
  font-family: Verdana, arial, helvetica, sans-serif;
  font-size: 10px;
  font-weight: normal;
}
/* ... */

